--- a/index.html
+++ b/index.html
@@ -15,26 +15,76 @@
     <link rel="stylesheet" href="css/style-m.css" media="all and (max-width: 1023.9px)" />
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/common.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
   </head>
   <body class="main">
   
     <div id="wrapper">
       <a href="#main" id="skip-nav">본문 바로가기</a>
       <header id="header">
+        <div class="container">
+          <h1>logo</h1>
+          <div class="box">
+            <ul class="slide slick gnb_slide">
+              <li>menu1</li>
+              <li>menu2</li>
+              <li>menu3</li>
+              <li>menu4</li>
+              <li>menu5</li>
+              <li>menu6</li>
+              <li>menu7</li>
+              <li>menu8</li>
+              <li>menu9</li>
+              <li>menu10</li>
+            </ul>
+          </div>
 
+        </div>
       </header>
 
       <main id="main">
+        <div class="image-slide">
+          <div class="box">
+            <ul class="slide slick">
+              <li><a href="#"><img alt="" src="./img/product-01.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-02.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-03.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-04.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-05.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-06.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-07.jpg"></a></li>
+            </ul>
+          </div>
+        </div>
 
+        <div class="image-slide">
+          <div class="box">
+            <ul class="slide slick">
+              <li><a href="#"><img alt="" src="./img/product-01.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-02.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-03.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-04.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-05.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-06.jpg"></a></li>
+              <li><a href="#"><img alt="" src="./img/product-07.jpg"></a></li>
+            </ul>
+          </div>
+        </div>
       </main>
 
       <footer id="footer">
 
       </footer>
     </div>
+   
 <script>
 'use strict';
-  
+
+
+
+
 
 
 </script>
